@@ -1,6 +1,7 @@
 
 === 4.0.0 (unreleased) ===
-* feat: Enable the configuration of endpoint querystring parameters via cms_config
+* feat: Enable the configuration of endpoint querystring parameters via CMS_ENDPOINT_QUERYSTRING_PARAM_ENABLED
+  and CMS_ENDPOINT_QUERYSTRING_CONFIGURATION settings
 * Backported from develop: Upgrade Gulp and NodeJs
 * feat: Re-enable showing the toolbar to anonymous users
 * Backport django 3.2 support
